# GPGPU_vs_OpenCL

./: .gitignore  CMakeLists.txt  README.md  compute.cl  compute.glsl  main.cpp
